--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
   "dependencies": {
     "@bochilteam/scraper": "^3.0.0",
     "@phaticusthiccy/open-apis": "^1.8.5",
-    "@sentry/node": "^7.7.0",
     "axios": "^0.27.2",
     "brainly-scraper-v2": "^2.0.13",
+    "cabul": "^0.0.22",
     "canvafy": "^1.4.2",
-    "canvas": "^2.9.3",
     "canvas-senpai": "^2.0.3",
     "cherio": "^1.0.0-rc.2",
     "discord-image-generation": "^1.4.13",
@@ -29,7 +28,6 @@
     "g-i-s": "^2.1.6",
     "google-play-scraper": "^9.0.1",
     "html-to-text": "^8.2.0",
-    "jsdom": "^20.0.0",
     "knights-canvas": "^1.3.7-a",
     "mal-scraper": "^2.11.4",
     "mongoose": "^6.5.1",
@@ -37,15 +35,12 @@
     "node-fetch": "^2.6.7",
     "otakudesu-scraper": "^1.2.0",
     "pageres": "^6.3.1",
-    "path": "^0.12.7",
-    "qs": "^6.11.0",
     "request": "^2.88.2",
     "scathach-api": "^1.0.12",
     "shortid": "^2.2.16",
     "url-exist": "^2.0.2",
     "util": "^0.12.4",
     "xfarr-api": "^2.0.0",
-    "youtubei.js": "^1.4.3",
     "yt-search": "^2.10.3",
     "ytdl-core": "^4.11.0"
   }
