--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "discord-image-generation": "^1.4.13",
     "express": "^4.18.1",
     "fietu": "^1.1.38",
+    "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "g-i-s": "^2.1.6",
     "google-play-scraper": "^9.0.1",
