--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "api",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -25,7 +25,6 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fietu": "^1.1.38",
-    "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "g-i-s": "^2.1.6",
     "google-play-scraper": "^9.0.1",
@@ -33,6 +32,7 @@
     "knights-canvas": "^1.3.7-a",
     "mal-scraper": "^2.11.4",
     "mongoose": "^6.5.1",
+    "nhentai-api": "^3.4.3",
     "node": "^16.0.0",
     "node-fetch": "^2.6.7",
     "pageres": "^6.3.1",
