--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "brainly-scraper-v2": "^2.0.13",
     "cabul": "^0.0.22",
     "canvafy": "^1.4.2",
+    "canvas": "^2.9.3",
     "canvas-senpai": "^2.0.3",
     "cherio": "^1.0.0-rc.2",
     "discord-image-generation": "^1.4.13",
@@ -32,9 +33,7 @@
     "knights-canvas": "^1.3.7-a",
     "mal-scraper": "^2.11.4",
     "mongoose": "^6.5.1",
-    "nhentai-api": "^3.4.3",
     "node": "^16.0.0",
-    "pageres": "^6.3.1",
     "request": "^2.88.2",
     "scathach-api": "^1.0.12",
     "shortid": "^2.2.16",
