--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "discord-image-generation": "^1.4.13",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.5.2",
     "fietu": "^1.1.38",
     "fs": "^0.0.1-security",
     "g-i-s": "^2.1.6",
