--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.2",
     "fietu": "^1.1.38",
+    "form-data": "^4.0.0",
     "fs": "^0.0.1-security",
     "g-i-s": "^2.1.6",
     "google-play-scraper": "^9.0.1",
@@ -41,7 +42,6 @@
     "url-exist": "^2.0.2",
     "url-pdf": "^1.0.1",
     "util": "^0.12.4",
-    "yt-search": "^2.10.3",
-    "ytdl-core": "^4.9.1"
+    "yt-search": "^2.10.3"
   }
 }
