--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "canvas": "^2.11.0",
     "canvas-senpai": "^2.0.3",
     "cherio": "^1.0.0-rc.2",
+    "cors": "^2.8.5",
     "discord-image-generation": "^1.4.13",
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.2",
